Updates on dependencies except major version updates. Tests run under junit5